# regalloc2

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
doc/: DESIGN.md  FASTALLOC.md  GENERAL.md  ION.md  TODO
fuzz/: Cargo.toml  crash-6da6887cee7bc1d4b5101dc3f7bc5ed34ce681b3  perf.data
fuzz/fuzz_targets/: domtree.rs  fastalloc.rs  fastalloc_checker.rs  ion.rs  ion_checker.rs  moves.rs  ra3_checker.rs  ssagen.rs
regalloc2-tool/: Cargo.toml
regalloc2-tool/src/: main.rs
src/: bitvec.rs  cfg.rs  checker.rs  domtree.rs  fastalloc.rs  index.rs  indexset.rs  lib.rs  moves.rs  postorder.rs  regalloc3.rs  serialize.rs  ssa.rs  util.rs
src/fastalloc/: bitset.rs  iter.rs  lru.rs  mod.rs  tests.rs  vregset.rs
src/fuzzing/: domtree.rs  fastalloc.rs  func.rs  ion.rs  mod.rs  moves.rs  ssa.rs
src/ion/: data_structures.rs  dump.rs  liveranges.rs  merge.rs  mod.rs  moves.rs  process.rs  redundant_moves.rs  reg_traversal.rs  requirement.rs  spill.rs  stackmap.rs
test/: Cargo.toml
test/benches/: regalloc.rs
test/src/: main.rs
