[workspace]
members = ["regalloc2-tool"]

[package]
name = "regalloc2"
version = "0.9.4"
authors = [
    "Chris Fallin <chris@cfallin.org>",
    "Mozilla SpiderMonkey Developers",
]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
description = "Backtracking register allocator inspired from IonMonkey"
repository = "https://github.com/bytecodealliance/regalloc2"

[dependencies]
log = { version = "0.4.8", default-features = false }
smallvec = { version = "1.6.1", features = ["union"] }
rustc-hash = { version = "1.1.0", default-features = false }
slice-group-by = { version = "0.3.0", default-features = false }
hashbrown = { version = "0.14", features = ["ahash"], default-features = false }

# Optional serde support, enabled by feature below.
serde = { version = "1.0.136", features = [
    "derive",
    "alloc",
], default-features = false, optional = true }

# The below are only needed for fuzzing.
libfuzzer-sys = { version = "0.4.2", optional = true }

# When testing regalloc2 by itself, enable debug assertions and overflow checks
[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[features]
default = ["std"]

# Enables std-specific features such as the Error trait for RegAllocError.
std = []

# Enables generation of DefAlloc edits for the checker.
checker = []

# Enables detailed logging which can be somewhat expensive.
trace-log = []

# Exposes the internal API for fuzzing.
fuzzing = ["libfuzzer-sys", "checker", "trace-log"]

# Enables serde for exposed types.
enable-serde = ["serde"]
