[package]
name = "regalloc2-fuzz"
version = "0.0.0"
authors = ["Chris Fallin <chris@cfallin.org>"]
license = "MPL-2.0 AND Apache-2.0 WITH LLVM-exception"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
regalloc2 = { path = "../", features = ["fuzzing"] }
log = { version = "0.4.8", default-features = false }
env_logger = "0.8.3"
libfuzzer-sys = "0.4.2"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "domtree"
path = "fuzz_targets/domtree.rs"
test = false
doc = false

[[bin]]
name = "ssagen"
path = "fuzz_targets/ssagen.rs"
test = false
doc = false

[[bin]]
name = "ion"
path = "fuzz_targets/ion.rs"
test = false
doc = false

[[bin]]
name = "moves"
path = "fuzz_targets/moves.rs"
test = false
doc = false

[[bin]]
name = "ion_checker"
path = "fuzz_targets/ion_checker.rs"
test = false
doc = false

[[bin]]
name = "fastalloc_checker"
path = "fuzz_targets/fastalloc_checker.rs"
test = false
doc = false

# Enable debug assertions and overflow checks when fuzzing
[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
