[package]
name = "regalloc2-tool"
authors = [
    "Chris Fallin <chris@cfallin.org>",
    "Mozilla SpiderMonkey Developers",
]
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0 WITH LLVM-exception"
description = "Tool for testing regalloc2"
repository = "https://github.com/bytecodealliance/regalloc2"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.11", features = ["derive"] }
pretty_env_logger = "0.5.0"
regalloc2 = { path = "..", features = ["trace-log", "enable-serde"] }
